# bike-rental-db

./: pyproject.toml
bike_rental_db/: config.py  connect.py
bike_rental_db/collections/: __init__.py  grouped_trips.py  stations.py  stations_status.py  trips.py
bike_rental_db/data/: utils.py
bike_rental_db/documents/: __init__.py  grouped_trips.py  station.py  stations_status.py  trips.py
bike_rental_db/error_handler/: __init__.py  station_status.py  stations.py  trips.py  utils.py
bike_rental_db/pipelines/: __init__.py  grouped_trips.py  stations_status.py  trips.py
bike_rental_db/scripts/: populate_db.py
